--- a/Deadline.Api/appsettings.json
+++ b/Deadline.Api/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ScalarUI": {
+    "Title": "天气预报 API",
+    "Version": "v1",
+    "Description": "这是一个使用 Scalar UI 的 OpenAPI 示例项目，展示了数组参数的使用。",
+    "Theme": {
+      "DarkMode": true,
+      "Colors": {
+        "primary": "#1976d2",
+        "secondary": "#424242",
+        "success": "#2e7d32",
+        "error": "#d32f2f",
+        "warning": "#ed6c02",
+        "info": "#0288d1"
+      }
+    }
+  }
 }
