--- a/Deadline.Api/Deadline.Api.csproj
+++ b/Deadline.Api/Deadline.Api.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Tenon.FluentValidation.AspNetCore.Extensions" Version="0.0.1-alpha-202502241449" />
     <PackageReference Include="Tenon.Serialization.Json" Version="0.0.1-alpha-202502241449" />
     <PackageReference Include="Tenon.Serilog.AspNetCore.Extensions" Version="0.0.1-alpha-202502241449" />
+    <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
